--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,10 +18,12 @@
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
     "@reduxjs/toolkit": "^2.3.0",
+    "firebase": "^11.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
+    "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
