--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,21 +2,31 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "migration:all:up": "npx knex migrate:latest",
+    "migration:all:down": "npx knex migrate:rollback --all",
+    "migration:status": "npx knex migrate:list",
+    "seed:create": "npx knex seed:make",
+    "seed:run": "npx knex seed:run",
+    "migrations": " npx knex migrate:latest --knexfile knexfile.js",
+    "for_init": "npx knex migrate:make init --migrations-directory migrations"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.7"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.7",
+    "pdf-parse": "^1.1.1"
   }
 }
